# eden-subnet

./: .env.example  .gitignore  Dockerfile  README.md  bulk_launcher.py  docker-compose.template.yaml  docker-compose.validator.yaml  docker-compose.yaml  docker_launch.sh  fleet.sh  install.sh  launch.sh  launcher.sh  pyproject.toml  requirements.txt
changelog/: may-20-24-accountment.md  v0.1.1-announcment.md  v0.1.1.md
data/: weights.json
eden_subnet/: __init__.py  cli.py  client.py  launch.py
eden_subnet/base/: base.py  config.py  data_models.py
eden_subnet/miner/: config.py  data_models.py  eden.py  miner.py  tiktokenizer.py
eden_subnet/validator/: config.py  data_models.py  eden.py  eden_Validator_1.py  sigmoid.py  vali::eden.py  validator.py
eden_subnet/validator/use_validators/: Miner1.py  admin.py
tests/base/: test_base.py
tests/miner/: test_miner.py
tests/validator/: test_validator.py
