[tool.poetry]
name = "eden-subnet"
version = "0.1.0"
description = "template for validator miner pair for eden subnet on communeai"
authors = ["Richard <Bakobiibizo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
communex = "^0.1.34.5"
eth-typing = "^4.4.0"
httpx = "^0.27.2"
loguru = "^0.7.2"
openai = "^1.52.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^2.7.0"
substrate-interface = "^1.7.11"
tiktoken = "^0.6.0"
torch = "^2.3.1"
torchaudio = "^2.3.1"
torchvision = "^0.18.1"
transformers = {git = "https://github.com/huggingface/transformers"}
uvicorn = "^0.29.0"
tenacity = "^9.0.0"







[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipython-db = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
